--- a/Cargo.toml
+++ b/Cargo.toml
@@ -106,9 +106,9 @@ name = "example_generic_extrinsic"
 path = "src/examples/example_generic_extrinsic.rs"
 
 # Todo: #179
-#[[example]]
-#name = "example_print_metadata"
-#path = "src/examples/example_print_metadata.rs"
+[[example]]
+name = "example_print_metadata"
+path = "src/examples/example_print_metadata.rs"
 
 [[example]]
 name = "example_compose_extrinsic_offline"
